fix: heigth on mobile

--- a/front-end/src/app/styles.css
+++ b/front-end/src/app/styles.css
@@ -15,6 +15,9 @@
     grid-template-rows: repeat(5, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
+    @media (max-width: 1150px) {
+        height: 115vh;
+    }
     @media (max-width: 920px) {
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(5, 1fr);
